hphp/hack/test/typecheck/enum_class_label/memoized_invalid_syntax.php
<?hh

<<__Memoize("Bar")>>
function foo(): void {}
